# dry_console

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  fix_use_effect_with_deps.sh  funcs.sh  systemd.service  test_counter.sh
.github/workflows/: pr.yaml  release.yml  rust.yml
common/: Cargo.toml
common/src/: token.rs
dto/: Cargo.toml
dto/src/: config.rs  lib.rs  script.rs  session.rs  websocket.rs  workstation.rs
frontend/: Cargo.toml  build.rs  build.rs.b  index.html  package-lock.json  package.json  style.css
frontend/src/: app.rs  components.rs  hello.rs  index.rs  login.rs  main.rs  notification.rs  pages.rs  random.rs  toast.rs  websocket.rs
frontend/src/components/: button_link.rs  color_picker.rs  dependencies.rs  loading_state.rs  logout.rs  manual_intervention.rs  markdown.rs  terminal.rs  terminal_context_provider.rs
frontend/src/pages/: apps.rs  host.rs  index.rs  login.rs  routes.rs  workstation.rs
frontend/src/pages/workstation/: dependencies.rs  install_d_rymcg_tech.rs  system.rs
script/: Cargo.toml
script/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  app_state.rs  auth.rs  command_library_generated.rs  config.rs  main.rs  path.rs  response.rs  routing.rs  sudo.rs  websocket.rs
server/src/api/: admin.rs  auth.rs  docs.rs  random.rs  session.rs  test.rs  token.rs  websocket.rs  workstation.rs
server/src/api/test/: counter.rs  error.rs  hello.rs  ping.rs
server/src/api/workstation/: bash.rs  check_sudo.rs  command.rs  command_execute.rs  commands.rs  curl.rs  d_rymcg_tech.rs  dependencies.rs  docker.rs  filesystem.rs  git.rs  htpasswd.rs  jq.rs  make.rs  openssl.rs  platform.rs  sed.rs  shred.rs  ssh.rs  xargs.rs  xdg_open.rs
server/src/api/workstation/dependencies/: bash.rs  curl.rs  docker.rs  git.rs  htpasswd.rs  jq.rs  make.rs  openssl.rs  sed.rs  shred.rs  ssh.rs  xargs.rs  xdg_open.rs
server/src/api/workstation/scripts/: common.sh  install_d_rymcg_tech.sh  install_dependencies.sh  test_example_one.sh
