[package]
name = "frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
browser-panic-hook = "0.2.0"
gloo-events = "0.2.0"
gloo-net = "0.4"
gloo-utils = "0.2.0"
log = "0.4.17"
patternfly-yew = { version = "0.6.2", features = ["icons-fab", "tree"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3" }
strum_macros = "0.26.4"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "Window", "MediaQueryList"] }
yew = { version = "0.21", features = ["csr"] }
yew-nested-router = "0.7.0"
yew-router = "0.17.0"

