[package]
name = "dry_console_script"
edition = "2021"
version.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
utoipa = { version = "4.2.3", features = ["axum_extras", "ulid"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
utoipauto = "0.1.14"
os-release = "0.1.0"
ulid = { version = "1.1.3", features = ["serde"] }
num_enum = "0.7.3"
sha2 = "0.10.8"
dry_console_dto = { path = "../dto" }

[build-dependencies]
walkdir = "2.5.0"
convert_case = "0.6.0"
dry_console_dto = { path = "../dto" }
strum = { version = "0.26.3", features = ["derive"] }
