[package]
name = "dry_console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aper = "0.3.0"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.8", features = ["derive"] }
enum-iterator = "2.1.0"
open = "5.2.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tower-livereload = "0.9.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["serde"] }

# [[package]]
# path = ../