[package]
name = "dry_console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aper = "0.3.0"
argon2 = "0.5.3"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-login = "0.15.3"
axum-messages = "0.6.1"
axum-typed-websockets = "0.6.0"
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
cookie = { version = "0.18.1", features = ["signed"] }
enum-iterator = "2.1.0"
hostname = "0.4.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.6"
jiff = { version = "0.1.0", features = ["serde"] }
open = "5.2.0"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tower-livereload = "0.9.3"
tower-sessions = { version = "0.12.2", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["serde"] }
users = "0.11.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
utoipauto = "0.1.12"

# [[package]]
# path = ../
