[package]
name = "dry_console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aper = "0.3.0"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-login = "0.15.3"
axum-messages = "0.6.1"
axum-typed-websockets = "0.6.0"
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive", "env"] }
cookie = { version = "0.18.1", features = ["signed"] }
enum-iterator = "2.1.0"
hostname = "0.4.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.6"
open = "5.2.0"
os-release = "0.1.0"
rand = "0.8.5"
regex = "1.10.5"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
sha2 = "0.10.8"
shell-words = "1.1.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tower-livereload = "0.9.3"
tower-sessions = { version = "0.12.2", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
utoipauto = "0.1.12"
which = "6.0.2"
dry_console_dto = { path = "../dto" }
dry_console_common = { path = "../common" }
ulid = { version = "1.1.3", features = ["serde"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
uzers = "0.12.1"
futures = "0.3.30"
indoc = "2.0.5"
lazy_static = "1.5.0"
itertools = "0.13.0"
dirs = "5.0.1"
ron = "0.8.1"

# [[package]]
# path = ../

[build-dependencies]
walkdir = "2.5.0"
convert_case = "0.6.0"
dry_console_dto = { path = "../dto" }
dry_console_common = { path = "../common" }
strum = { version = "0.26.3", features = ["derive"] }
ulid = { version = "1.1.3", features = ["serde"] }
sha2 = "0.10.8"
